# pstringmatching

./: CMakeLists.txt  ReadMe.md  main.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
csrc/: main.cpp
csrc/similarity_join/: jaccard_join.hpp
csrc/similarity_measure/: bag_distance.hpp  cosine.hpp  dice.hpp  generalized_jaccard.hpp  jaccard.hpp  jaro.hpp  jaro_winkler.hpp  levenshtein.hpp  needleman_wunsch.hpp  overlap_coefficient.hpp  smith_waterman.hpp  tversky_index.hpp
csrc/tokenizer/: alphabetic_tokenizer.hpp  alphanumeric_tokenizer.hpp  bag_tokenizer.hpp  qgram_tokenizer.hpp  token_counter.hpp  whitespace_tokenizer.hpp
csrc/util/: counter_iterator.hpp
tests/: conftest.py
tests/pstringmatching/fixture/: fodors_zagats.py
tests/pstringmatching/similarity_measure/: test_bag_distance.py  test_char_based_measures.py  test_cosine.py  test_dice.py  test_jaccard.py  test_overlap_coefficient.py  test_set_based_measures.py
