[project]
name = "pstringmatching"
version = "0.1.0"
description = "Paralleled string similarity matching extension"
readme = "README.md"
authors = [
    { name = "zhinanertui", email = "zhinanertui@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy"
]

[build-system]
requires = ["setuptools", "pybind11[global]"]
build-backend = "setuptools.build_meta"
